--- a/index.html
+++ b/index.html
@@ -10,7 +10,49 @@
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<nav>
+
+	</nav>
 </head>
+
+<body>
+	<main>
+		<section>
+			<h1>ONZE BESTE AANBIEDING VAN HET JAAR</h1>
+		</section>
+	</main>
+
+	<main>
+		<section>
+			<h1>OWN THE FLOOR</h1>
+		</section>
+	</main>
+
+	<main>
+		<section>
+			<img>
+		</section>
+	</main>
+
+	<main>
+		<section>
+			<img>
+		</section>
+	</main>
+
+	<main>
+		<section>
+			<img>
+		</section>
+	</main>
+	<script defer src="scripts/script.js"></script>
+</body>
+
+<footer>
+	<nav>
+
+	</nav>
+</footer>
 
 <body>
 	<h1>Kim</h1>
