--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<main>
 		<section>
-			<img>
+			<img src="images/Homepage/RPReplay_Final1700058215.mov" width="375px" alt="omschrijving van de pagina">
 		</section>
 	</main>
 
