--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
 
 	<main>
 		<section>
-			<img>
+			<img src="images/Homepage/Schermafbeelding%202023-11-15%20om%2015.02.25.png" width="375px" alt="omschrijving van de pagina">
+			<img src="images/Homepage/Schermafbeelding%202023-11-15%20om%2015.02.25-2.png" width="375px" alt="omschrijving van de pagina">
+			<img src="images/Homepage/Schermafbeelding%202023-11-15%20om%2015.03.50-2.png" width="375px" alt="omschrijving van de pagina">
+			<img src="images/Homepage/Schermafbeelding%202023-11-15%20om%2015.03.50.png" width="375px" alt="omschrijving van de pagina">
+			<img src="images/Homepage/Schermafbeelding%202023-11-15%20om%2015.06.13.png" width="375px" alt="omschrijving van de pagina">
+			<img src="images/Homepage/Schermafbeelding%202023-11-15%20om%2015.07.26.png" width="375px" alt="omschrijving van de pagina">
 		</section>
 	</main>
 
