--- a/index.html
+++ b/index.html
@@ -20,21 +20,16 @@
 		<section>
 			<h1>ONZE BESTE AANBIEDING VAN HET JAAR</h1>
 		</section>
-	</main>
- 
-	<main>
+	
 		<section>
 			<h1>OWN THE FLOOR</h1>
+			<p>Laat je stijl zien met iconische sneakers en nieuwe looks</p>
 		</section>
-	</main>
-
-	<main>
+	
 		<section>
-			<img src="images/Homepage/banner_-_nike.png.webp" width="375px" alt="omschrijving van de pagina">
+			<img src="images/Homepage/RPReplay_Final1700058215.mov" width="375px" alt="omschrijving van de pagina">
 		</section>
-	</main>
-
-	<main>
+	
 		<section>
 			<img src="images/Homepage/Schermafbeelding%202023-11-15%20om%2015.02.25.png" width="375px" alt="omschrijving van de pagina">
 			<img src="images/Homepage/Schermafbeelding%202023-11-15%20om%2015.02.25-2.png" width="375px" alt="omschrijving van de pagina">
@@ -43,11 +38,9 @@
 			<img src="images/Homepage/Schermafbeelding%202023-11-15%20om%2015.06.13.png" width="375px" alt="omschrijving van de pagina">
 			<img src="images/Homepage/Schermafbeelding%202023-11-15%20om%2015.07.26.png" width="375px" alt="omschrijving van de pagina">
 		</section>
-	</main>
-
-	<main>
+	
 		<section>
-			<img>
+			<img src="images/Homepage/banner_-_nike.png.webp" width="375px" alt="omschrijving van de pagina">
 		</section>
 	</main>
 	<script defer src="scripts/script.js"></script>
