--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
 </head>
 
 <body>
+	<nav>
+    <div class="left">
+        <img src="images/nike-logo.png" alt="">
+    </div>
+    <div class="center">
+        <p>Nieuw en uitgelicht</p>
+        <p>Heren</p>
+        <p>Dames</p>
+        <p>Kids</p>
+        <p>Sale</p>
+
+    </div>
+    <div class="right">
+        <input type="search" placeholder="Zoek">
+        <img src="images/menu1.png" alt="">
+    </div>
+     </nav>
 	<main>
 		<section>
 			<h1>ONZE BESTE AANBIEDING VAN HET JAAR</h1>
