--- a/index.html
+++ b/index.html
@@ -31,8 +31,30 @@
     <div class="right">
         <input type="search" placeholder="Zoek">
         <img src="images/menu1.png" alt="">
-    </div>
+    </div>	
      </nav>
+    <div class="alert">
+       <p>Voor de winter</p>
+       <p><span>Bereid je voor op kou en regen <a href="#">Shop</a></span></p>
+    </div>
+    <div class="hero">
+    <p class="hero-subtitle">
+        Onvoorstelbaar veel mogelijkheden
+    </p>
+    <p class="hero-title">
+        onze beste aanbieding van het jaar
+    </p>
+    <p class="hero-quote">
+        Exclusieve producten voor Nike members.
+    </p>
+
+        <button>
+            Join Us
+        </button>
+
+</div>
+
+	
 	<main>
 		<section>
 			<h1>ONZE BESTE AANBIEDING VAN HET JAAR</h1>
