--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<nav>
+<nav>
     <div class="left">
         <img src="images/nike-logo.png" alt="">
     </div>
@@ -32,7 +32,7 @@
         <input type="search" placeholder="Zoek">
         <img src="images/menu1.png" alt="">
     </div>	
-     </nav>
+</nav>
     <div class="alert">
        <p>Voor de winter</p>
        <p><span>Bereid je voor op kou en regen <a href="#">Shop</a></span></p>
@@ -52,31 +52,130 @@
             Join Us
         </button>
 
+    </div>
+	<div class="carousel-container2">
+    <p class="carousel-title-2">Trending deze week</p>
+    <div class="carousel-wrapper2">
+        <div class="carousel-item2">
+            <img src="images/schoen-1.webp" alt="Slide 1">
+            <div class="description">
+                <p class="title">
+                    Nike Dunk Low
+                </p>
+                <p class="subtitle">
+                    Damesschoenen
+                </p>
+                <p class="price">
+                    $ 119,99
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item2">
+            <img src="images/schoen-2.webp" alt="Slide 1">
+            <div class="description">
+                <p class="title">
+                    Nike Dunk Low
+                </p>
+                <p class="subtitle">
+                    Damesschoenen
+                </p>
+                <p class="price">
+                    $ 119,99
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item2">
+            <img src="images/schoen-3.webp" alt="Slide 1">
+            <div class="description">
+                <p class="title">
+                    Nike Dunk Low
+                </p>
+                <p class="subtitle">
+                    Damesschoenen
+                </p>
+                <p class="price">
+                    $ 119,99
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item2">
+            <img src="images/schoen-4.webp" alt="Slide 1">
+            <div class="description">
+                <p class="title">
+                    Nike Dunk Low
+                </p>
+                <p class="subtitle">
+                    Damesschoenen
+                </p>
+                <p class="price">
+                    $ 119,99
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item2">
+            <img src="images/schoen-5.webp" alt="Slide 1">
+            <div class="description">
+                <p class="title">
+                    Nike Dunk Low
+                </p>
+                <p class="subtitle">
+                    Damesschoenen
+                </p>
+                <p class="price">
+                    $ 119,99
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item2">
+            <img src="images/schoen-6.webp" alt="Slide 1">
+            <div class="description">
+                <p class="title">
+                    Nike Dunk Low
+                </p>
+                <p class="subtitle">
+                    Damesschoenen
+                </p>
+                <p class="price">
+                    $ 119,99
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item2">
+            <img src="images/schoen-7.webp" alt="Slide 1">
+            <div class="description">
+                <p class="title">
+                    Nike Dunk Low
+                </p>
+                <p class="subtitle">
+                    Damesschoenen
+                </p>
+                <p class="price">
+                    $ 119,99
+                </p>
+            </div>
+        </div>
+        <div class="carousel-item2">
+            <img src="images/schoen-8.webp" alt="Slide 1">
+            <div class="description">
+                <p class="title">
+                    Nike Dunk Low
+                </p>
+                <p class="subtitle">
+                    Damesschoenen
+                </p>
+                <p class="price">
+                    $ 119,99
+                </p>
+            </div>
+        </div>
+
+        <!-- Add more items as needed -->
+    </div>
+    <div class="prev2" onclick="prevSlide2()">&#10094;</div>
+    <div class="next2" onclick="nextSlide2()">&#10095;</div>
 </div>
 
 	
-	<main>
-		<section>
-			<h1>ONZE BESTE AANBIEDING VAN HET JAAR</h1>
-		</section>
-	
-		<section>
-			<h1>OWN THE FLOOR</h1>
-			<p>Laat je stijl zien met iconische sneakers en nieuwe looks</p>
-		</section>
-	
-		<section>
-			
-		</section>
-	
-		<section>
-			
-		</section>
-	
-		<section>
-			
-		</section>
-	</main>
 	<script defer src="scripts/script.js"></script>
 </body>
 
