--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
  <nav>
     <div class="left">
-        <img src="images/nike-logo.png" alt="">
+        <img src="images/nike-logo.pn" alt="">
     </div>
     <div class="center">
         <p>Nieuw en uitgelicht</p>
