--- a/index.html
+++ b/index.html
@@ -29,6 +29,38 @@
         <img src="images/menu1.png" alt="">
     </div>	
  </nav>
+    <div class="alert">
+        <p>Voor de winter</p>
+        <p><span>Bereid je voor op kou en regen <a href="#">Shop</a></span></p>
+    </div>
+    <div class="hero">
+        <p class="hero-subtitle">
+        Onvoorstelbaar veel mogelijkheden
+        </p>
+        <p class="hero-title">
+        onze beste aanbieding van het jaar
+        </p>
+        <p class="hero-quote">
+        Exclusieve producten voor Nike members.
+        </p>
+
+        <button>
+            Join Us
+        </button>
+    </div>
+    <div class="hero2">
+        <p class="hero2-title">
+        own the floor
+        </p>
+        <p class="hero2-description">
+        Laat je stijl zien met iconische sneakers en nieuwe looks.
+        </p>
+
+        <button>
+        Shop
+        </button>
+
+    </div>
 	<script defer src="scripts/script.js"></script>
 </body>
 
