--- a/index.html
+++ b/index.html
@@ -59,8 +59,26 @@
         <button>
         Shop
         </button>
-
     </div>
+    <div class="video">
+        <video autoplay muted loop>
+        <source src="videos/video-1.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+        </video>
+   </div>
+   <div class="carousel-container">
+   <div class="carousel-wrapper">
+        <div class="carousel-item"><img src="images/dance.png" alt="Slide 1"></div>
+        <div class="carousel-item"><img src="images/dance-2.png" alt="Slide 2"></div>
+        <div class="carousel-item"><img src="images/dance-3.png" alt="Slide 3"></div>
+        <div class="carousel-item"><img src="images/dance-4.png" alt="Slide 4"></div>
+        <div class="carousel-item"><img src="images/dance-5.png" alt="Slide 1"></div>
+        <div class="carousel-item"><img src="images/dance-6.png" alt="Slide 2"></div>
+    </div>
+
+    <div class="prev" onclick="prevSlide()">&#10094;</div>
+    <div class="next" onclick="nextSlide()">&#10095;</div>
+</div>
 	<script defer src="scripts/script.js"></script>
 </body>
 
