--- a/index.html
+++ b/index.html
@@ -13,73 +13,77 @@
 </head>
 
 <body>
- <nav>
-    <div class="left">
-        <img src="images/nike-logo.png" alt="">
-    </div>
-    <div class="center">
-        <p>Nieuw en uitgelicht</p>
-        <p>Heren</p>
-        <p>Dames</p>
-        <p>Kids</p>
-        <p>Sale</p>
-    </div>
-    <div class="right">
-        <input type="search" placeholder="Zoek">
-        <img src="images/menu1.png" alt="">
-    </div>	
- </nav>
-    <div class="alert">
-        <p>Voor de winter</p>
-        <p><span>Bereid je voor op kou en regen <a href="#">Shop</a></span></p>
-    </div>
-    <div class="hero">
-        <p class="hero-subtitle">
-        Onvoorstelbaar veel mogelijkheden
-        </p>
-        <p class="hero-title">
-        onze beste aanbieding van het jaar
-        </p>
-        <p class="hero-quote">
-        Exclusieve producten voor Nike members.
-        </p>
+	<nav>
+		<div class="left">
+			<img src="images/nike-logo.png" alt="">
+		</div>
+		<div class="center">
+			<p>Nieuw</p>
+			<p>Heren</p>
+			<p>Dames</p>
+			<p>Kids</p>
+			<p>Sale</p>
+		</div>
+		<div class="right">
+			<input type="search" placeholder="Zoek">
+			<img src="images/menu1.png" alt="">
+		</div>	
+	</nav>
+		<div class="alert">
+			<p>Voor de winter</p>
+			<p>
+				<span>Bereid je voor op kou en regen 
+					<a href="#">Shop</a>
+				</span>
+			</p>
+		</div>
+		<div class="hero">
+			<p class="hero-subtitle">
+				Onvoorstelbaar veel mogelijkheden
+			</p>
+			<p class="hero-title">
+				onze beste aanbieding van het jaar
+			</p>
+			<p class="hero-quote">
+				Exclusieve producten voor Nike members.
+			</p>
+		
+				<button>
+					Join Us
+				</button>
+		</div>
+		<div class="hero2">
+			<p class="hero2-title">
+			own the floor
+			</p>
+			<p class="hero2-description">
+			Laat je stijl zien met iconische sneakers en nieuwe looks.
+			</p>
+	
+			<button>
+			Shop
+			</button>
+		</div>
+		<div class="video">
+			<video autoplay muted loop>
+			<source src="images/video-1.mov" type="video/mp4">
+			</video>
+	    </div>
+	    <div class="carousel-container">
+	    <div class="carousel-wrapper">
+		 	<div class="carousel-item"><img src="images/dance.png" alt="Slide 1"></div>
+			<div class="carousel-item"><img src="images/dance-2.png" alt="Slide 2"></div>
+			<div class="carousel-item"><img src="images/dance-3.png" alt="Slide 3"></div>
+			<div class="carousel-item"><img src="images/dance-4.png" alt="Slide 4"></div>
+			<div class="carousel-item"><img src="images/dance-5.png" alt="Slide 1"></div>
+			<div class="carousel-item"><img src="images/dance-6.png" alt="Slide 2"></div>
+		</div>
+	
+		<div class="prev" onclick="prevSlide()">&#10094;</div>
+		<div class="next" onclick="nextSlide()">&#10095;</div>
+	</div>
 
-        <button>
-            Join Us
-        </button>
-    </div>
-    <div class="hero2">
-        <p class="hero2-title">
-        own the floor
-        </p>
-        <p class="hero2-description">
-        Laat je stijl zien met iconische sneakers en nieuwe looks.
-        </p>
-
-        <button>
-        Shop
-        </button>
-    </div>
-    <div class="video">
-        <video autoplay muted loop>
-        <source src="videos/video-1.mp4" type="video/mp4">
-        </video>
-   </div>
-   <div class="carousel-container">
-   <div class="carousel-wrapper">
-        <div class="carousel-item"><img src="images/dance.png" alt="Slide 1"></div>
-        <div class="carousel-item"><img src="images/dance-2.png" alt="Slide 2"></div>
-        <div class="carousel-item"><img src="images/dance-3.png" alt="Slide 3"></div>
-        <div class="carousel-item"><img src="images/dance-4.png" alt="Slide 4"></div>
-        <div class="carousel-item"><img src="images/dance-5.png" alt="Slide 1"></div>
-        <div class="carousel-item"><img src="images/dance-6.png" alt="Slide 2"></div>
-    </div>
-
-    <div class="prev" onclick="prevSlide()">&#10094;</div>
-    <div class="next" onclick="nextSlide()">&#10095;</div>
-</div>
-
-<div class="carousel-container2">
+	<div class="carousel-container2">
 		<p class="carousel-title-2">Trending deze week</p>
 		<div class="carousel-wrapper2">
 			<div class="carousel-item2">
@@ -218,7 +222,7 @@
 		<div class="next" onclick="nextSlide3()">&#10095;</div>
 	</div>
 	
-	div class="more">
+	<div class="more">
 		<p class="more-title">
 			Ontdek Meer
 		</p>
@@ -756,7 +760,5 @@
     
     init4();
 </script>
-	
-
 	
 </html>
