--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		</div>
 		<div class="video">
 			<video autoplay muted loop>
-			<source src="images/video-1.mov" type="video/mp4">
+			<source src="videos/video-1.mov" type="video/mp4">
 			</video>
 	    </div>
 	    <div class="carousel-container">
