--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
-	<script src="java.js"></script>
+	<script src="script.js"></script>
 </head>
 
 <body>
