--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <section class="video">
     <video autoplay muted loop>
-      <source src="images/video-1.mov" type="video/mp4">
+      <source src="videos/video-1.mov" type="video/mp4">
     </video>
   </section>
 
