--- a/join.html
+++ b/join.html
@@ -49,7 +49,7 @@
     
     <section class="video">
         <video autoplay muted loop>
-            <source src="images/video-2.mp4" type="video/mp4">
+            <source src="videos/video-2.mp4" type="video/mp4">
         </video>
     
         <div class="video-content">
