--- a/join.html
+++ b/join.html
@@ -194,7 +194,7 @@
     <section class="video-section">
         <div class="video video2">
             <video autoplay muted loop>
-                <source src="images/video-1.mov" type="video/mp4">
+                <source src="videos/video-1.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
